--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
            <h1>
           <butto>
-              <a href="index.html">Go</a>
+              <a href="2.html">Go</a>
               </button>
                </h1>
         
