--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>Paavan Zala</title>
-        
+        <meta name="monetag" content="4510a7e627c45cc3679dad93a329b552">
         <script src="https://richinfo.co/richpartners/pops/js/richads-pu-ob.js" data-pubid="881748" data-siteid="329896" async data-cfasync="false"></script>
         <script src="https://richinfo.co/richpartners/push/js/rp-cl-ob.js?pubid=881748&siteid=329897&niche=33" async data-cfasync="false"></script>
         
